# incident-pipeline

./: .env  .env.example  .gitignore  MIGRATION_STATUS.md  README.md  pyproject.toml
configs/: settings.yaml
data/ntsb/manifests/: manifest.db
docs/architecture/: metadata-authority.md  pipeline-architecture.md  replay_reconciliation.md  statement_execution_and_caching.md
docs/migration/: repo-consolidation-plan.md
docs/source_contracts/: sentence-span-generation-contract.md  sentence-to-atomic-contract.md  source-stage-contract.md
manifests/: manifest.db
scripts/: commit_ai.py  init_db.py  query_cli.py  run_chunk.py  run_docket_ingest.py  run_docket_triage.py  run_embed.py  run_extract.py  run_primary_docket_narrative.py  run_structure.py
sql/: init_manifest.sql
src/incident_pipeline/common/: __init__.py  paths.py  settings.py  stage_runs.py
src/incident_pipeline/extract/: atomic_contract.py  atomic_extract.py  cli.py  fake_transformer.py  pdf_extract.py  (+4 more)
tests/: test_atomic_extract.py  test_docket_ingest.py  test_docket_triage.py  test_extract_cli.py  test_metadata_authority.py  test_openai_atomic_inference.py  test_pdf_extract.py  test_primary_docket_narrative.py  test_sentence_spans.py  test_settings.py  test_structure_extract.py  test_structure_state_machine.py
tests/ntsb_acquire_tests/: test_blobs.py  test_carol.py  test_case_views.py  test_cli_smoke.py  test_config.py  test_db.py  test_docket_search.py  test_dockets.py  test_hashing.py  test_integration_acquire.py  test_manifests.py  test_normalize.py  test_promotion.py  test_selection.py
(+45 files in other folders)
